Added code (not checked)

--- a/naka8177FunkyTown/signonfixed.html
+++ b/naka8177FunkyTown/signonfixed.html
@@ -1,13 +1,39 @@
 <!DOCTYPE html>
 <html>
+  <meta charset="utf-8">
   <head>
-    <meta charset="utf-8">
     <link rel="stylesheet" href="assets:/css:/signon.css">
+    <title>Funky Town Music</title>
   </head>
 
-  <body>
-    
-
+  <body class="fixed">
+    <header>
+      <p>Funky Town Music</p>
+      <img src="assets:/img:/soundwave.png">
+    </header>
+    <section id="form">
+      <h1>Sign On</h1>
+      <p>Enter your username and password to securely view and manage your music selection.</p>
+      <form action="https://example.com">
+        <input type="text" name="user" placeholder="Username">
+        <input type="text" name="pwd" placeholder="Password">
+        <label for="saveUser">Save Username</label>
+        <input type="checkbox" name="saveUser">
+        <a href="https://example.com">Forgot Password/Username?</a>
+        <a href="https://example.com">Enroll Now</a>
+        <input type="submit">
+      </form>
+    </section>
+    <section id="related">
+      <hr>
+      <h2>Related Information</h2>
+      <ul>
+        <li><a href="https://example.com">Enrollment FAQs</a></li>
+        <li><a href="https://example.com">Online Security Guarentee</a></li>
+        <li><a href="https://example.com">Privacy, Security and Legal</a></li>
+        <li><a href="https://example.com">Online Access Agreement</a></li>
+      </ul>
+    </section>
   </body>
 
 </html>
