Added css for submit button

--- a/naka8177FunkyTown/signonfixed.html
+++ b/naka8177FunkyTown/signonfixed.html
@@ -9,7 +9,7 @@
   <body class="fixed">
     <header>
       <p>Funky Town Music</p>
-      <img src="assets:/img:/soundwave.png">
+      <img src="assets:/img:/soundwave.png" width="700px">
     </header>
     <section id="form">
       <h1>Sign On</h1>
@@ -19,9 +19,8 @@
         <input type="text" name="pwd" placeholder="Password">
         <label for="saveUser">Save Username</label>
         <input type="checkbox" name="saveUser">
-        <a href="https://example.com">Forgot Password/Username?</a>
-        <a href="https://example.com">Enroll Now</a>
-        <input type="submit">
+        <p><a href="https://example.com">Forgot Password/Username?</a>|<a href="https://example.com">Enroll Now</a></p>
+        <input type="submit" id="submitBtn">
       </form>
     </section>
     <section id="related">
