Updated signonfixed.htmland styles.css

--- a/naka8177FunkyTown/signonfixed.html
+++ b/naka8177FunkyTown/signonfixed.html
@@ -1,22 +1,23 @@
 <!DOCTYPE html>
-<html>
-  <meta charset="utf-8">
+<html lang="en">
   <head>
-    <link rel="stylesheet" href="assets:/css:/signon.css">
+    <meta charset="utf-8">
     <title>Funky Town Music</title>
+    <link rel="stylesheet" type="text/css" href="assets:/css:/styles.css">
   </head>
 
   <body class="fixed">
     <header>
-      <p>Funky Town Music</p>
-      <img src="assets:/img:/soundwave.png" width="700px">
+      <h1>Funky Town Music</h1>
+      <img width="700px" src="assets:/img:/soundwave.png" alt="Soundwave">
     </header>
     <section id="form">
-      <h1>Sign On</h1>
+      <h2>Sign On</h2>
       <p>Enter your username and password to securely view and manage your music selection.</p>
       <form action="https://example.com">
         <input type="text" name="user" placeholder="Username">
         <input type="text" name="pwd" placeholder="Password">
+        <br>
         <label for="saveUser">Save Username</label>
         <input type="checkbox" name="saveUser">
         <p><a href="https://example.com">Forgot Password/Username?</a>|<a href="https://example.com">Enroll Now</a></p>
