added signonfluid.html, changed folder names

--- a/naka8177FunkyTown/signonfixed.html
+++ b/naka8177FunkyTown/signonfixed.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="utf-8">
     <title>Funky Town Music</title>
-    <link rel="stylesheet" type="text/css" href="assets:/css:/styles.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/styles.css"/>
   </head>
 
   <body class="fixed">
     <header>
       <h1>Funky Town Music</h1>
-      <img width="700px" src="assets:/img:/soundwave.png" alt="Soundwave">
+      <img width="700px" src="assets/img/soundwave.png" alt="Soundwave">
     </header>
     <section id="form">
       <h2>Sign On</h2>
@@ -20,7 +20,7 @@
         <br>
         <label for="saveUser">Save Username</label>
         <input type="checkbox" name="saveUser">
-        <p><a href="https://example.com">Forgot Password/Username?</a>|<a href="https://example.com">Enroll Now</a></p>
+        <p><a href="https://example.com">Forgot Password/Username?</a> | <a href="https://example.com">Enroll Now</a></p>
         <input type="submit" id="submitBtn">
       </form>
     </section>
