almost finished with signonfixed.html

--- a/naka8177FunkyTown/signonfixed.html
+++ b/naka8177FunkyTown/signonfixed.html
@@ -9,31 +9,35 @@
   <body class="fixed">
     <header>
       <h1>Funky Town Music</h1>
-      <img width="700px" src="assets/img/soundwave.png" alt="Soundwave">
     </header>
-    <section id="form">
-      <h2>Sign On</h2>
-      <p>Enter your username and password to securely view and manage your music selection.</p>
-      <form action="https://example.com">
-        <input type="text" name="user" placeholder="Username">
-        <input type="text" name="pwd" placeholder="Password">
-        <br>
-        <label for="saveUser">Save Username</label>
-        <input type="checkbox" name="saveUser">
-        <p><a href="https://example.com">Forgot Password/Username?</a> | <a href="https://example.com">Enroll Now</a></p>
-        <input type="submit" id="submitBtn">
-      </form>
-    </section>
-    <section id="related">
-      <hr>
-      <h2>Related Information</h2>
-      <ul>
-        <li><a href="https://example.com">Enrollment FAQs</a></li>
-        <li><a href="https://example.com">Online Security Guarentee</a></li>
-        <li><a href="https://example.com">Privacy, Security and Legal</a></li>
-        <li><a href="https://example.com">Online Access Agreement</a></li>
-      </ul>
-    </section>
+    <img width="700px" src="assets/img/soundwave.png" alt="Soundwave">
+    <div>
+      <section id="form">
+        <h2>Sign On</h2>
+        <p>Enter your username and password to securely view and manage your music selection.</p>
+        <form action="https://example.com">
+          <input type="text" name="username" placeholder="Username">
+          <input type="text" name="password" placeholder="Password">
+          <br>
+          <br>
+          <input type="checkbox" name="saveName">
+          <label for="saveName">Save Username</label>
+          <p><a href="https://example.com">Forgot Password/Username?</a> | <a href="https://example.com">Enroll Now</a></p>
+          <button type="submit" id="submitBtn">Sign On</button>
+        </form>
+      </section>
+      <section id="related">
+        <hr>
+        <h3>Related Information</h3>
+        <ul>
+          <li><a href="https://example.com">Enrollment FAQs</a></li>
+          <li><a href="https://example.com">Online Security Guarentee</a></li>
+          <li><a href="https://example.com">Privacy, Security and Legal</a></li>
+          <li><a href="https://example.com">Online Access Agreement</a></li>
+        </ul>
+      </section>
+    </div>
+    
   </body>
 
 </html>
