Finalized signonfixed.html

--- a/naka8177FunkyTown/signonfixed.html
+++ b/naka8177FunkyTown/signonfixed.html
@@ -17,7 +17,7 @@
         <p>Enter your username and password to securely view and manage your music selection.</p>
         <form action="https://example.com">
           <input type="text" name="username" placeholder="Username">
-          <input type="text" name="password" placeholder="Password">
+          <input type="password" name="password" placeholder="Password">
           <br>
           <br>
           <input type="checkbox" name="saveName">
