Changed css to better fit both html

--- a/naka8177FunkyTown/signonfixed.html
+++ b/naka8177FunkyTown/signonfixed.html
@@ -11,7 +11,7 @@
       <h1>Funky Town Music</h1>
     </header>
     <img width="700px" src="assets/img/soundwave.png" alt="Soundwave">
-    <div>
+    <div class="fixed">
       <section id="form">
         <h2>Sign On</h2>
         <p>Enter your username and password to securely view and manage your music selection.</p>
