--- a/naka8177JSClock/index.html
+++ b/naka8177JSClock/index.html
@@ -3,6 +3,9 @@
   <head>
     <link href="assets/css/styles.css" rel="stylesheet" type="text/css">
     <script src="assets/scripts/clock2d.js" async></script>
+    <script>
+
+    </script>
   </head>
   <body>
     <header>JS Clock v1.0</header>
