Updated visuals and added time zones

--- a/naka8177JSClock_2/index.html
+++ b/naka8177JSClock_2/index.html
@@ -8,19 +8,22 @@
     </script>
   </head>
   <body>
-    <header>JS Clock v1.0</header>
+    <header>
+      JS Clock v2.0
+      <div id="clock">DIGITAL</div>
+    </header>
     <div id="container">
       <div id="left">
-        <canvas id="clockCanvasL" width="210" height="210"></canvas>
+        <canvas id="clockCanvasL" width="250" height="250"></canvas>
       </div>
       <div id="middle">
         <canvas id="clockCanvasM" width="250" height="250"></canvas>
       </div>
       <div id="right">
-        <canvas id="clockCanvasR" width="150" height="150"></canvas>
+        <canvas id="clockCanvasR" width="250" height="250"></canvas>
       </div>
     </div>
-    <button id="currentTimeBtn">Update Time</button>
+
 
 
   
