--- a/naka8177JSClock_2/index.html
+++ b/naka8177JSClock_2/index.html
@@ -10,7 +10,7 @@
   <body>
     <header>
       JS Clock v2.0
-      <div id="clock">DIGITAL</div>
+      <div id="clockStyle">DIGITAL</div>
     </header>
     <div id="container">
       <div id="left">
